tests/examples/good/garbage_collector/good031.lat
int main() {
    int i = 0;
    {
    A a = new A;
    A a2;
    while (i < 10) {
        a2 = a;
        i++;
    }
    }

    return 0;
}

class A {
    int a;
    int b;
    string s;
}