tests/examples/bad/class_member_field_type_not_declared.lat
int main() {
    return 1;
}
 
class A {
    B a;
}

